# CPP-ChatsRooms

./: CMakeLists.txt
Client/: TcpCLientMessenger.h
Debug/: MCA  MSA  TEST
MCA/: TcpCLientMessenger.cpp  TcpCLientMessenger.h  UdpClientMessenger.cpp  UdpClientMessenger.h  main.cpp
MSA/: LoginDispatcher.cpp  LoginDispatcher.h  TcpServerMessenger.cpp  TcpServerMessenger.h  User.cpp  User.h  userList.txt
Server/: LoginDispatcher.cpp  Main.cpp  TcpServerMessenger.cpp  TcpServerMessenger.h  cRoom.cpp  cRoom.h
SocketUtils/: MThread.cpp  MThread.h  MultipleTCPSocketListener.cpp  MultipleTCPSocketListener.h  TCPMessengerProtocol.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
Tests/: MessengerTest.cpp  MessengerTest.h  TCPSocketTest.cpp  TCPSocketTest.h  UDPSocketTest.cpp  UDPSocketTest.h  main.cpp
